appId: com.lkurczab.fitaly
env:
  E2E_CONFLICT_USERNAME: e2e
  E2E_REGISTER_EMAIL: e2e-conflict-username@example.com
  E2E_REGISTER_PASSWORD: Test1234.
---
- stopApp
- openLink: __E2E_EXPO_URL__
- runFlow:
    when:
      visible: "Nie teraz|Not [Nn]ow"
    commands:
      - tapOn: "Nie teraz|Not [Nn]ow"
- assertVisible:
    id: e2e-booted
- openLink: fitaly://e2e/reset?logout=1
- assertVisible:
    id: e2e-ready-login
- assertVisible:
    id: login-email-input
- tapOn:
    id: login-register-link

- extendedWaitUntil:
    visible:
      id: register-username-input
    timeout: 10000
- tapOn:
    id: register-username-input
- eraseText
- inputText: ${E2E_CONFLICT_USERNAME}
- tapOn:
    id: register-email-input
- eraseText
- inputText: ${E2E_REGISTER_EMAIL}
- tapOn:
    id: register-password-visibility-toggle
- tapOn:
    id: register-confirm-password-visibility-toggle
- tapOn:
    id: register-password-input
- eraseText
- inputText: ${E2E_REGISTER_PASSWORD}
- tapOn:
    id: register-confirm-password-input
- eraseText
- inputText: ${E2E_REGISTER_PASSWORD}
- tapOn:
    point: "87%,89%"
- tapOn: "Utwórz konto"
- tapOn:
    id: register-terms-checkbox
- tapOn:
    id: register-submit-button

- assertVisible:
    id: register-username-error
- assertVisible:
    id: register-username-input
